--- a/contact-me.html
+++ b/contact-me.html
@@ -9,6 +9,19 @@
 <p>My Fictional Address</p>
 <p>0778788732</p>
 <p>845280629abc@gmail.com</p>
+<hr>
+<form class="" action="mailto:845280629abc@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value="">
+    <br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value="">
+    <br>
+    <label>Your Message:</label>
+    <br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea>
+    <input type="submit" name="" >
 
+</form>
 </body>
 </html>
