--- a/index.html
+++ b/index.html
@@ -5,16 +5,48 @@
     <title>YINAN's Personal Site</title>
 </head>
 <body>
-<img src="https://www.w3schools.com/images/colorpicker.gif" alt="profile picture">
-<h1>YINAN YANG</h1>
-<p><em>Founder and CTO of <strong><a href="https://www.w3schools.com/">The App Brewery</a></strong></em></p>
-<p>I am an IOS and Web Developer. I &#129409 coffee and brew own beers.</p>
+<table cellspacing="20">
+    <tr>
+        <td><img src="https://www.w3schools.com/images/colorpicker.gif" alt="profile picture"></td>
+        <td><h1>YINAN YANG</h1>
+            <p><em>Founder and CTO of <strong><a href="https://www.w3schools.com/">The App Brewery</a></strong></em></p>
+            <p>I am an IOS and Web Developer. I &#129409 coffee and brew own beers.</p></td>
+    </tr>
+</table>
 <hr>
 <h3>Books and Teaching</h3>
 <ul>
     <li>The Complete IOS App Development Bootcamp</li>
     <li>The Complete Web Development Bootcamp</li>
 </ul>
+<hr>
+<h3>Work Experience</h3>
+<table cellspacing="10">
+    <thead><tr><th>Dates</th><th>Work</th></tr></thead>
+    <tbody>
+    <tr><td>2010-2013</td><td>Lead Developer at Tempo App</td></tr>
+    <tr><td>2010</td><td>Researcher at The Institute of Cognitive Neurosciences</td></tr>
+    </tbody>
+    <tfoot></tfoot>
+</table>
+<hr>
+<h3>Skills</h3>
+<table cellspacing="10">
+            <tr>
+                <td>iOS Development</td>
+                <td>&#11088&#11088&#11088&#11088&#11088</td>
+            </tr>
+            <tr>
+                <td>Web Development </td>
+                <td>&#11088&#11088&#11088&#11088&#11088</td>
+            </tr>
+            <tr>
+                <td>Photography</td>
+                <td>&#11088&#11088&#11088&#11088&#11088</td>
+            </tr>
+
+</table>
+<hr>
 <a href="hobbies.html">My Hobbies</a>
 <br>
 <a href="contact-me.html">Contact Me</a>
